--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 			<h3><strong>EDUCATION</strong></h3>
 			<strong>May 2021: 
 
-				<a href="https://www.jmu.edu"> James Madison University</a>
-				, Harrisonburg, VA</strong>
+				<a href="https://www.jmu.edu"> James Madison University</a>, Harrisonburg, VA</strong>
 			<ul>
 				<li>Bachelor of Arts in <a href="https://www.jmu.edu/theatredance/majors/dance.shtml">Dance</a></li>
 				<li>Bachelor of Arts in <a href="https://www.jmu.edu/smad/">Media Arts and Design</a></li>
