--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<h3><strong>SCHOLARSHIPS & AWARDS</strong></h3>
 			<h4>JMU School of Media Arts and Design</h4>
 				<ul>
-				<li>George Johnson Scholarship ($1,600) &ndash; April 2019</li>
+				<li><a href="https://www.jmu.edu/news/smad/2019/04-12-SMAD-banquet-2019.shtml">George Johnson Scholarship</a> ($1,600) &ndash; April 2019</li>
 				</ul>
 			<h4>JMU College of Visual and Performing Arts</h4>
 				<ul>
