--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             	background-color: rgba(2,2,2,.7);
             }
  
-            #soft, #act, #edu {
+            #soft, #act {
             	display: flex;
             	flex-direction: column;
             	justify-content: flex-start;
@@ -101,6 +101,21 @@
             	background-color: rgba(2,2,2,.7);
 
             }
+ #edu {		
+              	display: flex;		
+             	flex-direction: column;		
+             	justify-content: flex-start;		
+             	width: 200px;		
+             	border-top: 0px solid #ccc;		
+             	border-right: 0px solid #ccc;		
+             	border-bottom: 0px solid #ccc;		
+             	border-left: 0px solid #ccc;		
+             	margin-right: 50px;		
+             	margin-left: 10px;		
+             	margin-bottom: 50px;		
+             	padding: 9px;		
+             	background-color: rgba(2,2,2,.7);		
+             	height: auto;
 
             }
 
@@ -128,6 +143,7 @@
             	margin-top: 15px;
             	margin-bottom: 50px;
             	padding: 50px;
+            	
             	background-color: rgba(2,2,2,.7);
             }
 
