--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             	height: 100px;
             	margin-right: 50px;
             	margin-left: 10px;
-            	
+            	padding: 0px;
 
             }
 
